# TriloByte

./: .gitignore  README.MD  comparar_openrouter.py  comparar_traducciones.py  graficos.py  graficos_juez.py  juez_llm.py  main.py  parse_respuestas.py  puntuar_claude.py  pyproject.toml  recuperar_flash.py  repuntuar.py  unir_metricas.py
comparador-traduccion/: README.md  comparar.py  generar_traduccion.py  metricas.py  modelos.py  quechua_primeras_20_chatgpt.json  traduccion_claude.json
comparador-traduccion/input/: frases_es.json
comparador-traduccion/output/: metricas_por_frase.csv  reporte_comparacion.md
data/: comparacion_claude.csv  comparacion_llm.csv  comparacion_openrouter.csv  diccionario_quechua_castellano.csv  juez_claude-haiku-4-5.csv  juez_gemini-2.5-flash-lite.csv  juez_gemini-2.5-flash.csv  metricas_completo.csv  muestra_500_palabras.txt  muestra_500_ref.csv
