[project]
name = "trilobyte-dict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "matplotlib>=3.11.0",
    "numpy<2",
    "openai>=2.43.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=2.7,<3",
    "torch==2.2.2",
]
